--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
 
     dependencies {
         compile "org.springframework:spring-context:3.2.1.RELEASE"
+        testCompile "junit:junit:4.+"
     }
 
 }
