fiksa buge fra pj
glemt å legge inn dependcy til core i camel

--- a/camel/build.gradle
+++ b/camel/build.gradle
@@ -9,6 +9,8 @@ jettyRun{
 def camelVersion = "2.10.3"
 
 dependencies {
+    compile project(':core')
+
 
     //camel
     compile "org.apache.camel:camel-core:$camelVersion"
